Add sellStock API
